# Assignment2_ML_as_a_service

./: Makefile  README.md  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/: Untitled.ipynb
notebooks/forecasting/: alexander_daniel-24591214-ARIMA_forecasting.ipynb
notebooks/predictive/: Untitled.ipynb  alexander_daniel-24591214-rf_prediction.ipynb  rf_reg_1.ipynb
src/features/: build_features.py
