[tool.poetry]
name = "assignment-2-adv-ml-algo"
version = "0.1.0"
description = ""
authors = ["Daniel Alexander"]
readme = "README.md"
packages = [{include = "assignment_2_adv_ml_algo"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"
matplotlib = "^3.8.0"
statsmodels = "^0.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
